# flserial

./: .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
.github/workflows/: flutter.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flserial_example/: MainActivity.kt
example/android/app/src/main/kotlin/pl/glpro/flserial_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/lib/: flserial_test.dart
example/windows/: CMakeLists.txt  example.dart
example/windows/runner/: Runner.rc  main.cpp
ios/: flserial.podspec
ios/Classes/: flserial.c
lib/: flserial.dart  flserial_bindings_generated.dart  flserial_exception.dart  main.dart
linux/: CMakeLists.txt  CMakeLists.txt.bak
macos/: flserial.podspec
macos/Classes/: flserial.c  flserial.cpp  flserial.h
macos/Classes/native_libs/include/: cglob.h  fifo.h
macos/Classes/native_libs/include/serial/: serial.h
macos/Classes/native_libs/include/serial/impl/: unix.h
macos/Classes/native_libs/src/: LICENSE_glob  fifo.c  serial.cpp
macos/Classes/native_libs/src/impl/: unix.cpp  win.cpp
macos/Classes/native_libs/src/impl/list_ports/: list_ports_osx.cpp
src/: CMakeLists.txt  flserial.c  flserial.cpp  flserial.def  flserial.h
src/native_libs/: CMakeLists.txt  LICENSE_tinycthread
src/native_libs/include/serial/: serial.h
src/native_libs/include/serial/impl/: unix.h
src/native_libs/src/: serial.cc  tinycthread.c
src/native_libs/src/impl/: cglob.c  unix.cpp  win.cc
src/native_libs/src/impl/list_ports/: list_ports_linux.cc  list_ports_linux.cpp
src/serial/: CMakeLists.txt
src/serial/include/serial/: serial.h
src/serial/src/impl/: fifo.c
src/serial/src/impl/list_ports/: list_ports_linux.cc
src/serial/visual_studio/test_serial/: test_serial.vcxproj
test/lib/: flserial_test.dart
windows/: CMakeLists.txt
